<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_layout_main_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fullscreenBackgroundColor"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.BagpipesChanterMusicNotesPractice.FullscreenContainer"
    tools:context=".FullscreenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:visibility="visible">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scrollview_session_type"
            android:layout_width="350dp"
            android:layout_height="150dp"
            android:fadeScrollbars="false"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarFadeDuration="0"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@id/checkbox_note_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_layout_session_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_note_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_name_of_note"
            app:layout_constraintBottom_toTopOf="@+id/textview_duration_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nested_scrollview_session_type" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/checkbox_ledger_line_names"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/display_names_of_ledger_lines"
            app:layout_constraintBottom_toTopOf="@+id/textview_duration_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkbox_note_name" />

        <TextView
            android:id="@+id/textview_duration_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:labelFor="@id/slider_duration"
            android:text="@string/duration_of_practice_time_in_minutes"
            app:layout_constraintBottom_toTopOf="@+id/slider_duration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkbox_ledger_line_names" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="1.0"
            android:value="10.0"
            android:valueFrom="1.0"
            android:valueTo="15.0"
            app:labelBehavior="visible"
            app:layout_constraintBottom_toTopOf="@+id/textview_persist_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_duration_label" />

        <TextView
            android:id="@+id/textview_persist_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:labelFor="@id/slider_persist"
            android:text="@string/persist_time_in_seconds"
            app:layout_constraintBottom_toTopOf="@+id/slider_persist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slider_duration" />

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_persist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="1.0"
            android:value="4.0"
            android:valueFrom="1.0"
            android:valueTo="15.0"
            app:labelBehavior="visible"
            app:layout_constraintBottom_toTopOf="@+id/button_begin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_persist_label" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_begin"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/black_overlay"
            android:text="@string/begin_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/slider_persist" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout_practicing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/textview_remaining_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@id/staff_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="10:34" />

        <com.heiligbasil.bagpipeschantermusicnotespractice.StaffView
            android:id="@+id/staff_view"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginHorizontal="4dp"
            android:background="@color/white"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_rewind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_blue_900"
            android:text="@string/rewind"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_play_pause"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/staff_view" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:text="@string/play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_stop"
            app:layout_constraintStart_toEndOf="@id/button_rewind"
            app:layout_constraintTop_toBottomOf="@id/staff_view" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/design_default_color_error"
            android:text="@string/stop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/button_play_pause"
            app:layout_constraintTop_toBottomOf="@id/staff_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
